- introduce parsers and formatters into variables as a first step towards introducing them in csv or other io capabilities